--- a/src/input.css
+++ b/src/input.css
@@ -23,4 +23,19 @@
         @apply text-base font-extrabold leading-tight text-mint uppercase ;
     }
 
+    .icon-container {
+        @apply bg-mint w-10 h-10 flex items-center justify-center rounded-xl;
+    }
+
+    .icon-container-bg {
+        @apply bg-white p-2 rounded-2xl;
+    }
+
+    .row-container {
+        @apply flex flex-col items-center text-center;
+    }
+
+    .contact-text {
+       @apply mt-4 flex gap-4 flex-col text-white text-xl leading-7 font-medium;
+    }
 }
