--- a/src/input.css
+++ b/src/input.css
@@ -4,11 +4,39 @@
 
 @import "tailwindcss/utilities";
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto-Regular.woff2') format('woff2'),
+         url('./assets/fonts/Roboto-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto-Medium.woff2') format('woff2'),
+         url('./assets/fonts/Roboto-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: url('./assets/fonts/Roboto-Bold.woff2') format('woff2'),
+         url('./assets/fonts/Roboto-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+
 
 @layer components {
     .body {
-        @apply flex flex-col justify-center bg-primary font-sans text-white;
+        @apply flex flex-col justify-center bg-primary font-sans text-white ;
+        @apply flex flex-col justify-center bg-primary font-sans text-white ;
     }
 
     .section {
